force-app/main/default/objects/Carrier__c/Carrier__c.object-meta.xml
<CustomObject>
    <label>Carrier</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Carrier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carriers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>