force-app/main/default/objects/Carrier__c/fields/BoR_Template_Link__c.field-meta.xml
<CustomField>
    <fullName>BoR_Template_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BoR Template Link</label>
    <type>Url</type>
</CustomField>