force-app/main/default/objects/Carrier__c/fields/Carrier_Id__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Id__c</fullName>
    <description>Hippo carrer id value populated from integration.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Carrier Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>