force-app/main/default/objects/Carrier__c/fields/Carrier_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Unique_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>