force-app/main/default/objects/Carrier__c/fields/Carrier_Wiki__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Wiki__c</fullName>
    <label>Carrier Wiki</label>
    <type>TextArea</type>
</CustomField>