force-app/main/default/objects/Carrier__c/fields/Escalation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalation Contact</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>