force-app/main/default/objects/Carrier__c/fields/Group_Submission_Event__c.field-meta.xml
<CustomField>
    <fullName>Group_Submission_Event__c</fullName>
    <label>Group Submission Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same</fullName>
            </value>
            <value>
                <fullName>Before Month</fullName>
            </value>
            <value>
                <fullName>After Month</fullName>
            </value>
            <value>
                <fullName>Before Days</fullName>
            </value>
            <value>
                <fullName>After Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>