force-app/main/default/objects/Carrier__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Lowercase concatenation of carrier name with state. Hyphen delimitated.</description>
    <externalId>true</externalId>
    <label>HI Carrier Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>