force-app/main/default/objects/Carrier__c/fields/New_Plan_Email_List__c.field-meta.xml
<CustomField>
    <fullName>New_Plan_Email_List__c</fullName>
    <inlineHelpText>Enter email in the format
&lt;Description&gt;::&lt;Email&gt;
&lt;Description&gt;::&lt;Email&gt;</inlineHelpText>
    <label>New Plan Email List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>