force-app/main/default/objects/Carrier__c/fields/PEO__c.field-meta.xml
<CustomField>
    <fullName>PEO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PEO Switcher Required Docs</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>