force-app/main/default/objects/Carrier__c/fields/Renewal_Email_List__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Email_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter in the format
&lt;Description&gt;::&lt;Email&gt;
&lt;Description&gt;::&lt;Email&gt;</inlineHelpText>
    <label>Renewal Email List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>