force-app/main/default/objects/Carrier__c/fields/Submission_Email__c.field-meta.xml
<CustomField>
    <fullName>Submission_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Email</label>
    <type>Email</type>
</CustomField>