force-app/main/default/objects/Carrier__c/fields/Submission_Method__c.field-meta.xml
<CustomField>
    <fullName>Submission_Method__c</fullName>
    <label>Submission Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carrier Portal</fullName>
            </value>
            <value>
                <fullName>Email (No Form)</fullName>
            </value>
            <value>
                <fullName>Mapped Form</fullName>
            </value>
            <value>
                <fullName>Non Mapped Form</fullName>
                <default>true</default>
                <label>Non Mapped Form</label>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>