force-app/main/default/objects/Carrier__c/fields/Termination_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Effective_Date__c</fullName>
    <label>Termination Effective Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On the Date</fullName>
            </value>
            <value>
                <fullName>Mid Month</fullName>
            </value>
            <value>
                <fullName>End of Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>