force-app/main/default/objects/Carrier__c/fields/Waiting_Period_Notes__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waiting Period Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>