force-app/main/default/objects/Carrier__c/recordTypes/Carrier.recordType-meta.xml
<RecordType>
    <fullName>Carrier</fullName>
    <active>true</active>
    <description>Medical Carrier</description>
    <label>Carrier</label>
</RecordType>