force-app/main/default/objects/Carrier__c/validationRules/Carrier_name_can_not_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Carrier_name_can_not_be_changed</fullName>
    <active>true</active>
    <description>Except for Integration Users, and ZP System Administrator the Carrier Name can not be updated.</description>
    <errorConditionFormula>AND (
        ISCHANGED (Name),  
        NOT (
            OR (
                $Profile.Id == &apos;00e16000001Mgbt&apos;, 
                $Profile.Id == &apos;00e1M000000Gj20&apos;, 
                $Profile.Id == &apos;00eG0000001ItJj&apos;
            )
        )
    )</errorConditionFormula>
    <errorMessage>Changing Carrier Names are not allowed, please contact your PE.</errorMessage>
</ValidationRule>